# CanneX

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.sh
docs/: README.md  generate_wiring_diagram.py
models/mobilenet_ssd/: README.md
sounds/: README.md
src/: __init__.py  config.py  main.py
src/connectivity/: __init__.py  bluetooth.py  usb.py
src/detection/: __init__.py  object_detector.py
src/feedback/: __init__.py  audio.py  haptic.py
src/sensors/: __init__.py  camera.py  ultrasonic.py
tests/: README.md  __init__.py
tests/test_detection/: __init__.py  test_object_detector.py
tests/test_feedback/: __init__.py  test_audio.py
tests/test_sensors/: __init__.py  test_ultrasonic.py
